# tinymr

./: README.rst  docs.rst  pyproject.toml  tinymr.py
.github/workflows/: test.yml
tests/: test_packaging.py
